fixing the tests